--- a/package.json
+++ b/package.json
@@ -17,17 +17,16 @@
   },
   "license": "0BSD",
   "dependencies": {
+    "bulma": "^0.9.1",
     "gatsby": "^2.26.1",
     "gatsby-plugin-manifest": "^2.9.0",
     "gatsby-plugin-offline": "^3.7.0",
     "gatsby-plugin-react-helmet": "^3.7.0",
     "gatsby-plugin-sass": "^2.8.0",
-    "materialize-css": "^1.0.0-rc.2",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-helmet": "^6.1.0",
-    "react-materialize": "^3.9.5"
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "@hot-loader/react-dom": "^17.0.1",
